# CatCam

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jiesiren/catcam/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CatCam.cpp  CatCam.h  CatImageReader.cpp  CatImageReader.h  CatLog.h  CatNdkCamera.cpp  CatNdkCamera.h  native-lib.cpp
app/src/main/java/com/jiesiren/catcam/: MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jiesiren/catcam/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
